<resources>
    <string name="app_name">MaleziApplication</string>
    <string name="welcome">Welcome to ... Profile</string>
    <string name="growth_chart_button">Growth Chart</string>
    <string name="milestone_tracking">Milestone Tracking</string>
    <string name="diet_tracking">Diet Tracking</string>
    <string name="sleep_tracking">Sleep Tracking</string>
    <string name="articles">Articles</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login_hint">Enter Username Here</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password Here</string>
    <string name="login_register">Already have an account? Login here!</string>
    <string name="register_login">Don\'t have an account? Register here!</string>
    <string name="addNew">Add New Child</string>
    <string name="logout">Logout</string>
    <string name="milestone1">0 - 2 months</string>
    <string name="milestone2">2 - 4 months</string>
    <string name="milestone3">4 - 6 months</string>
    <string name="milestone4">6 - 9 months</string>
    <string name="milestone5">9 - 12 months</string>
    <string name="milestone6">12 - 18 months</string>
    <string name="milestone7">12 - 18 months</string>
    <string name="milestone8">18 - 2 years</string>
    <string name="milestone9">8 - 9 months</string>
    <string name="milestone10">9 - 10 months</string>
    <string name="milestone11">10 - 11 months</string>
    <string name="milestone12">11 - 12 months</string>
    <string name="register_child">Register Child</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="name">Name</string>
    <string name="yes">Yes</string>
    <string name="delayed">Delayed</string>
    <string name="dob">Date of Birth</string>
    <string name="caregiver">Caregiver Level</string>
    <string name="milestone1_1">Begins To Smile At People</string>
    <string name="milestone1_2">Can briefly calm herself (may bring hands to mouth and suck on hand)</string>
    <string name="milestone1_3">Tries to look at parent</string>
    <string name="milestone1_4">Coos, makes gurgling sounds</string>
    <string name="milestone1_5">Turns head toward sounds</string>
    <string name="milestone1_6">Pays attention to faces </string>
    <string name="milestone1_7">Begins to follow things with eyes and recognize people at a distance</string>
    <string name="milestone1_8">Begins to act bored (cries, fussy) if activity does not change</string>
    <string name="milestone1_9">Can hold head up and begins to push up when lying on tummy</string>
    <string name="milestone1_10">Makes smoother movements with arms and legs</string>
    <string name="milestone2_1">Smiles spontaneously, especially at people</string>
    <string name="milestone2_2">Likes to play with people and might cry when playing stops</string>
    <string name="milestone2_3">Copies some movements and facial expressions, like smiling or frowning</string>
    <string name="milestone2_4">Begins to babble</string>
    <string name="milestone2_5">Babbles with expression and copies sounds he hearsBabbles with expression and copies sounds he hears</string>
    <string name="milestone2_6">Cries in different ways to show hunger, pain, or being tired</string>
    <string name="milestone2_7">Lets you know if he is happy or sad </string>
    <string name="milestone2_8">Responds to affection</string>
    <string name="milestone2_9">Reaches for toy with one hand</string>
    <string name="milestone2_10">Uses hands and eyes together, such as seeing a toy and reaching for it</string>
    <string name="milestone2_11">Follows moving things with eyes from side to side</string>
    <string name="milestone2_12">Watches faces closely</string>
    <string name="milestone2_13">Recognizes familiar people and things at a distance</string>
    <string name="milestone2_14">Holds head steady, unsupported</string>
    <string name="milestone2_15">Pushes down on legs when feet are on a hard surface</string>
    <string name="milestone2_16">May be able to roll over from tummy to back</string>
    <string name="milestone2_17">Can hold a toy and shake it and swing at dangling toys</string>
    <string name="milestone2_18">Brings hands to mouth</string>
    <string name="milestone2_19">When lying on stomach, pushes up to elbows</string>
    <string name="milestone3_1">Knows familiar faces and begins to know if someone is a stranger </string>
    <string name="milestone3_2">Likes to play with others, especially parents </string>
    <string name="milestone3_3">Responds to other people’s emotions and often seems happy</string>
    <string name="milestone3_4">Likes to look at self in a mirror</string>
    <string name="milestone3_5">Responds to sounds by making sounds</string>
    <string name="milestone3_6">Strings vowels together when babbling (“ah,” “eh,” “oh”) and likes taking turns with parent while making sounds</string>
    <string name="milestone3_7">Responds to own name</string>
    <string name="milestone3_8">Makes sounds to show joy and displeasure</string>
    <string name="milestone3_9">Begins to say consonant sounds (jabbering with “m,” “b”)</string>
    <string name="milestone3_10">Looks around at things nearby</string>
    <string name="milestone3_11">Brings things to mouth</string>
    <string name="milestone3_12">Shows curiosity about things and tries to get things that are out of reach</string>
    <string name="milestone3_13">Begins to pass things from one hand to the other</string>
    <string name="milestone3_14">Rolls over in both directions (front to back, back to front)</string>
    <string name="milestone3_15">Begins to sit without support</string>
    <string name="milestone3_16">When standing, supports weight on legs and might bounce</string>
    <string name="milestone3_17">Rocks back and forth, sometimes crawling backward before moving forward</string>
    <string name="milestone4_1">May be afraid of strangers</string>
    <string name="milestone4_2">May be clingy with familiar adults</string>
    <string name="milestone4_3">Has favorite toys</string>
    <string name="milestone4_4">Understands “no” </string>
    <string name="milestone4_5">Makes a lot of different sounds like “mamamama” and “bababababa”</string>
    <string name="milestone4_6">Copies sounds and gestures of others </string>
    <string name="milestone4_7">Uses fingers to point at things </string>
    <string name="milestone4_8">Watches the path of something as it falls</string>
    <string name="milestone4_9">Looks for things she sees you hide</string>
    <string name="milestone4_10">Plays peek-a-boo </string>
    <string name="milestone4_11">Puts things in his mouth</string>
    <string name="milestone4_12">Moves things smoothly from one hand to the other</string>
    <string name="milestone4_13">Picks up things like cereal o’s between thumb and index finger</string>
    <string name="milestone4_14">Stands, holding on</string>
    <string name="milestone4_15">Can get into sitting position</string>
    <string name="milestone4_16">Sits without support</string>
    <string name="milestone4_17">Pulls to stand</string>
    <string name="milestone4_18">Crawls</string>
    <string name="milestone5_1">Is shy or nervous with strangers</string>
    <string name="milestone5_2">Cries when mom or dad leaves</string>
    <string name="milestone5_3">Has favorite things and people</string>
    <string name="milestone5_4">Shows fear in some situations Video_04</string>
    <string name="milestone5_5">Hands you a book when he wants to hear a story</string>
    <string name="milestone5_6">Repeats sounds or actions to get attention</string>
    <string name="milestone5_7">Puts out arm or leg to help with dressing</string>
    <string name="milestone5_8">Plays games such as “peek-a-boo” and “pat-a-cake” </string>
    <string name="milestone5_9">Responds to simple spoken requests</string>
    <string name="milestone5_10">Uses simple gestures, like shaking head “no” or waving “bye-bye”</string>
    <string name="milestone5_11">Makes sounds with changes in tone (sounds more like speech) Video_04</string>
    <string name="milestone5_12">Says “mama” and “dada” and exclamations like “uh-oh!” Video_04</string>
    <string name="milestone5_13">Tries to say words you say </string>
    <string name="milestone5_14">Explores things in different ways, like shaking, banging, throwing</string>
    <string name="milestone5_15">Finds hidden things easily</string>
    <string name="milestone5_16">Looks at the right picture or thing when it’s named</string>
    <string name="milestone5_17">Copies gestures</string>
    <string name="milestone5_18">Starts to use things correctly; for example, drinks from a cup, brushes hair</string>
    <string name="milestone5_19">Bangs two things together</string>
    <string name="milestone5_20">Puts things in a container, takes things out of a container</string>
    <string name="milestone5_21">Lets things go without help</string>
    <string name="milestone5_22">Pokes with index (pointer) finger</string>
    <string name="milestone5_23">Follows simple directions like “pick up the toy” </string>
    <string name="milestone5_24">Gets to a sitting position without help </string>
    <string name="milestone5_25">Pulls up to stand, walks holding on to furniture (“cruising”) </string>
    <string name="milestone5_26">May take a few steps without holding on</string>
    <string name="milestone5_27">May stand alone </string>
    <string name="milestone6_1">Likes to hand things to others as play</string>
    <string name="milestone6_2">May have temper tantrums</string>
    <string name="milestone6_3">May be afraid of strangers</string>
    <string name="milestone6_4">Shows affection to familiar people </string>
    <string name="milestone6_5">Plays simple pretend, such as feeding a doll</string>
    <string name="milestone6_6">May cling to caregivers in new situations</string>
    <string name="milestone6_7">Points to show others something interesting </string>
    <string name="milestone6_8">Explores alone but with parent close by</string>
    <string name="milestone6_9">Says several single words</string>
    <string name="milestone6_10">Says and shakes head “no” </string>
    <string name="milestone6_11">Points to show someone what he wants</string>
    <string name="milestone6_12">Knows what ordinary things are for; for example, telephone, brush, spoon</string>
    <string name="milestone6_13">Points to get the attention of others</string>
    <string name="milestone6_14">Shows interest in a doll or stuffed animal by pretending to feed</string>
    <string name="milestone6_15">Points to one body part</string>
    <string name="milestone6_16">Scribbles on his own </string>
    <string name="milestone6_17">Can follow 1-step verbal commands without any gestures; for example, sits when you say “sit down”</string>
    <string name="milestone6_18">Walks alone Video_04</string>
    <string name="milestone6_19">May walk up steps and run Video_04</string>
    <string name="milestone6_20">Pulls toys while walking</string>
    <string name="milestone6_21">Can help undress herself</string>
    <string name="milestone6_22">Drinks from a cup </string>
    <string name="milestone6_23">Eats with a spoon </string>
    <string name="result">Check Recommendation</string>
    <string name="sleepTracking">Track Your Child\'s Sleeping Pattern</string>
    <string name="sleepTime">Sleep Time</string>
    <string name="wakeTime">Wake Up Time</string>
    <string name="logSession">Log Session</string>
</resources>
